@@ -1,3 +1,8 @@
+2020-05-13  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/95066
+	* g++.dg/cpp2a/explicit16.C: New test.
+
 2020-05-13  Jason Merrill  <jason@redhat.com>
 
 	* lib/target-supports.exp (check_effective_target_c++20_only)
